# hogar

./: CMakeLists.txt  MainWindow.qml  README.md  main.cpp
res/font/: Example-Map.js
res/ui/: MainWindow.qml
res/ui/util/components/: RoomCard.qml  ToggleButton.qml
res/ui/util/materialIcons/: MaterialIcon.qml  MaterialLoader.qml  qmldir
